--- a/styles/stile.css
+++ b/styles/stile.css
@@ -2,12 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgba(246,248,249,255);
+}
+
 
 header {
     width: 100%;
     height: 70px;
+    background-color: white;
 }
 
 .logo {
@@ -19,6 +25,9 @@ header {
 .titolo {
     display: inline-block;
     vertical-align: middle;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 2.5em;
+}
+
+main {
+    text-align: center;
 }
