--- a/styles/stile.css
+++ b/styles/stile.css
@@ -56,15 +56,50 @@ header {
     height: 740px;
     margin: auto;
     margin-top: 4px;
-    padding-top: 10px;
+    padding-top: 40px;
     padding-left: 60px;
 }
 
 .sezionelista {
     margin-bottom: 20px;
+    line-height: 30px;
 }
 
 h2 {
     display: inline-block;
-    line-height: 100px;
+}
+
+.task {
+    line-height: 45px;
+}
+
+.check {
+    color: rgba(131,205,188,255);
+    font-size: 10px;
+    border-radius: 100%;
+    border-width: thin;
+    border-color: rgba(131,205,188,255);
+    border-style: solid;
+    padding: 2px 4px;
+    margin-right: 5px;
+}
+
+.writtentask {
+    font-size: 1.2em;
+    font-weight: 300;
+}
+
+.tags {
+    font-size: 10px;
+    border-radius: 16px;
+    border-style: solid;
+    padding: 4px 13px;
+    vertical-align: middle;
+    
+}
+
+.editorial {
+    color: white;
+    background-color: turquoise;
+    border-color: turquoise;
 }
