--- a/styles/stile.css
+++ b/styles/stile.css
@@ -53,7 +53,7 @@ header {
 .contenitore2 {
     background-color: white;
     width: 60%;
-    height: 740px;
+    height: 720px;
     margin: auto;
     margin-top: 4px;
     padding-top: 40px;
@@ -75,7 +75,7 @@ h2 {
 
 .check {
     color: rgba(131,205,188,255);
-    font-size: 10px;
+    font-size: 12px;
     border-radius: 100%;
     border-width: thin;
     border-color: rgba(131,205,188,255);
@@ -86,10 +86,10 @@ h2 {
 
 .writtentask {
     font-size: 1.3em;
-    font-weight:
 }
 
 .tags {
+    color: white;
     font-size: 10px;
     border-radius: 16px;
     border-style: solid;
@@ -99,7 +99,21 @@ h2 {
 }
 
 .editorial {
-    color: white;
-    background-color: turquoise;
-    border-color: turquoise;
+    background-color: rgba(69,171,234,255);
+    border-color: rgba(69,171,234,255);
+}
+
+.q1goals {
+    background-color: rgba(156,114,228,255);
+    border-color: rgba(156,114,228,255);
+}
+
+.recruiting {
+    background-color: rgba(156,114,228,255);
+    border-color: rgba(156,114,228,255);
+}
+
+.editorial {
+    background-color: rgba(69,171,234,255);
+    border-color: rgba(69,171,234,255);
 }
