--- a/styles/stile.css
+++ b/styles/stile.css
@@ -74,16 +74,22 @@ h2 {
 }
 
 .check {
-    color: rgba(131,205,188,255);
     font-size: 12px;
     border-radius: 100%;
     border-width: thin;
-    border-color: rgba(131,205,188,255);
     border-style: solid;
     padding: 2px 4px;
     margin-right: 5px;
 }
+.done {
+    border-color: rgba(131,205,188,255);
+    color: rgba(131,205,188,255);
+}
 
+.notdone {
+    border-color:#eb5952;
+    color:#eb5952;
+}
 .writtentask {
     font-size: 1.3em;
 }
@@ -109,11 +115,21 @@ h2 {
 }
 
 .recruiting {
-    background-color: rgba(156,114,228,255);
-    border-color: rgba(156,114,228,255);
+    background-color: #64c0a9;
+    border-color: #64c0a9;
 }
 
-.editorial {
-    background-color: rgba(69,171,234,255);
-    border-color: rgba(69,171,234,255);
+.mobile {
+    background-color: #f29e33;
+    border-color: #f29e33;
+}
+
+.website {
+    background-color: #d863a1;
+    border-color: #d863a1;
+}
+
+.sales {
+    background-color: #b0c926;
+    border-color: #b0c926;
 }
