--- a/styles/stile.css
+++ b/styles/stile.css
@@ -67,9 +67,9 @@ header {
 .contenitore2 {
     background-color: white;
     width: 60%;
-    height: 720px;
     margin: auto;
     margin-top: 4px;
+    padding-bottom: 20px;
     padding-top: 40px;
     padding-left: 60px;
 }
