--- a/styles/stile.css
+++ b/styles/stile.css
@@ -26,6 +26,8 @@ header {
     display: inline-block;
     vertical-align: middle;
     font-size: 2.5em;
+    vertical-align: middle;
+    line-height: 1.8rem;
 }
 
 .contenitore {
