--- a/styles/stile.css
+++ b/styles/stile.css
@@ -115,7 +115,7 @@ h2 {
     border-radius: 16px;
     border-style: solid;
     padding: 4px 13px;
-    vertical-align: middle;
+    vertical-align: super;
     
 }
 
